# CodeSeeX

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README_CN.md  package.json  start-codeseex-dev.bat  start-desktop.cmd
.github/workflows/: build-desktop.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/installer/windows/: installer.nsi
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ui/public/: app-utils.js  app.js  index.html  styles.css
apps/ui/public/lang/: de_de.json  en_us.json  fr_fr.json  ja_jp.json  ko_kr.json  ru_ru.json  zh_cn.json  zh_hk.json  zh_tw.json
apps/ui/public/styles/components/: buttons.css  forms.css  lists.css  menus.css  overlays.css  panels.css  toml.css
apps/ui/public/styles/features/config/: billing.css  tools.css
apps/ui/public/styles/foundation/: base.css  theme.css
apps/ui/public/styles/layout/: app-shell.css  sidebar.css
apps/ui/public/styles/pages/: about.css  config.css  dashboard.css  logs.css  usage.css
crates/codeseex-core/src/: models.rs
crates/codeseex-proxy/src/: app_state.rs  config_payload.rs  http_response.rs  http_utils.rs  lib.rs  manager_api.rs  response_sse.rs  responses.rs  server.rs  text.rs  tools.rs
crates/codeseex-proxy/src/responses/: context.rs  conversion.rs  stream_tool_calls.rs
crates/codeseex-proxy/src/tools/: coordinator.rs  diagnostics.rs  hosted.rs  ownership.rs  registry.rs  response_items.rs
crates/codeseex-store/src/: store.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: catalog.rs  codex_auth.rs  config.rs  context.rs  lib.rs  models.rs  protocol.rs  urls.rs
crates/proxy/: Cargo.toml
crates/proxy/examples/: context_smoke_upstream.rs
crates/proxy/src/: app_state.rs  community_tools.rs  config_payload.rs  diagnostics.rs  http_response.rs  lib.rs  main.rs  manager_api.rs  manager_service.rs  network.rs  response_sse.rs  responses.rs  runtime_config.rs  server.rs  telemetry.rs  tool_passthrough.rs  tools.rs  upstream.rs
crates/proxy/src/responses/: compaction.rs  context.rs  conversion.rs  stream_tool_calls.rs  usage.rs
crates/proxy/src/responses/stream_tool_calls/: visible_bridge.rs
crates/proxy/src/server/: response_helpers.rs  streaming_state.rs  tests.rs
crates/proxy/src/tools/: chat_protocol.rs  coordinator.rs  definitions.rs  diagnostics.rs  hosted.rs  ownership.rs  permissions.rs  registry.rs  response_items.rs  tests.rs  vision.rs
crates/proxy/src/tools/web/: browser.rs  candidates.rs  extract.rs  input.rs  mod.rs  net.rs  open.rs  safety.rs  search.rs
crates/proxy/src/upstream/: deepseek.rs  payload.rs
crates/proxy/src/upstream/deepseek/: tool_protocol.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  store.rs
docs/: about-page-template-gallery.html  architecture.md  community-tools.md  electron-parity-baseline.md  electron-parity-checklist.md  milestones.md  port-and-conversation-log-prototype.html  protocol-rebuild-plan.md  state-contract.md  usage-detail-reference-aligned-static.html  usage-detail-template-gallery.html
scripts/: check-proxy-windows.ps1  check-windows.ps1  context-fidelity-smoke-windows.ps1  start-desktop-windows.ps1  start-proxy-windows.ps1
