[package]
name = "codeseex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs-next.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
url.workspace = true
